--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,10 +1,20 @@
 .App {
     text-align: center;
+    height: 100%;
 }
 
 .App-logo {
     animation: App-logo-spin infinite 20s linear;
-    height: 80px;
+    height: 100%;
+}
+
+.App-player {
+    position:absolute;
+    top:0;
+    left:0;
+    /*animation: App-logo-spin infinite 40s linear;*/
+    height: 100%;
+    width: 100%;
 }
 
 .App-header {
@@ -20,6 +30,7 @@
 
 .App-intro {
     font-size: large;
+    height: 100%;
 }
 
 @keyframes App-logo-spin {
