--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,4 +1,6 @@
 .App {
+    margin: 0;
+    padding: 0;
     text-align: center;
     height: 100%;
 }
@@ -18,17 +20,24 @@
 }
 
 .App-header {
+    position:absolute;
+    top:0;
+    left:0;
     background-color: #222;
-    height: 150px;
-    padding: 20px;
+    height: 100%;
+    width: 100%;
+    padding: 0px;
     color: white;
 }
 
 .App-title {
-    font-size: 1.5em;
+    align:center;
+    font-size: 5em;
 }
 
 .App-intro {
+    top:0;
+    left:0;
     font-size: large;
     height: 100%;
 }
